# chcore-1

./: .gitignore  CMakeLists.txt  Makefile  chcore.out  cmake_install.cmake  linker.lds.S  main.c  simulate.sh  tmp.out
boot/: init_c.c  init_c.s  mmu.c  start.S
boot/print/: printf.c
common/: mmu.h  smp.c
doc/: 517021910851-lab2.md  517021910851-lab3.md  517021910851-lab4.md
ipc/: CMakeLists.txt  ipc.h  ipc_send.c
kernel/: main.c  monitor.c
kernel/common/: lock.c  mm.h  printk.c  smp.c  vars.h
kernel/exception/: exception.c  exception_table.S  irq.c  pgfault.c
kernel/ipc/: ipc.h  ipc_call.c  ipc_client.c  ipc_recv.c  ipc_return.c  ipc_server.c
kernel/mm/: CMakeCache.txt  Makefile  buddy.c  buddy_struct.h  cmake_install.cmake  kmalloc.c  mm.c  page_table.S  page_table.c  page_table.h  slab.c  uaccess.c  vm_syscall.c  vmregion.c
kernel/process/: capability.c  process.c  thread.c  thread.h
kernel/sched/: context.c  policy_rr.c  sched.c  sched.h
kernel/syscall/: syscall.c
kernel/tests/: tst_sched.c
lib/: elf.h
process/: capability.c  process.c  thread.c
sched/: sched.h
syscall/: syscall.c  syscall_num.h
tests/mm/buddy/: buddy.out  test_buddy.c
tests/mm/page_table/: page_table.out  test_aarch64_page_table  test_aarch64_page_table.c
user/lab3/: testsbrk.c
user/lab4/: CMakeLists.txt  ipc_recv_server.c  ipc_send_client.c
user/lib/: ipc.c  ipc.h  launcher.h  libmain.c  spawn.c  syscall.c  syscall.h
